# pc-booster

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  network_monitor.rs  service_manager.rs  system_info.rs  tui.rs
